samples/_failures_safe/1761790063_ecc12f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1781f4a.c: In function ‘main’:
./samples/SAFE/__tmp_a1781f4a.c:166:5: error: expected identifier or ‘(’ at end of input
  166 |     Lexer
      |     ^~~~~
./samples/SAFE/__tmp_a1781f4a.c:166:5: error: expected declaration or statement at end of input
